[tool.poetry]
name = "pywebmain"
version = "0.0.1"
description = "A simple helper library for flask python web development"
authors = ["Ed Margias <edmachine@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
